--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -1,16 +1,20 @@
+
 @import 'variables.scss';
 
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
 @import './components/header';
 
-@import "./components/buttons";
+@import './components/buttons';
 
 @import './components/base';
 
 @import './components/branding';
 
-@import './components/hero-section';
+@import './components/section-about';
+
+
+
 
 
 
