--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,21 +1,21 @@
 .btn {
   border-radius: 5px;
+  border: none;
 }
 
 .btn-secondary,
 .btn-outline-secondary,
-.btn-primary{
-  padding: 12px 20px ;
+.btn-primary {
+  padding: 12px 20px;
 }
 
-.btn-primary{
-  background-color: var(--primary-btn-col-1)
+.btn-primary {
+  background-color: var(--primary-btn-col-1);
 }
 
-.btn-secondary{
-  background-color: var(--secondary-btn-col-2);
- 
+.btn-secondary {
+  background-color: $pink;
 }
-.btn-primary:hover{
+.btn-primary:hover {
   background-color: var(--primary-btn-col-2);
 }
