--- a/src/scss/components/_hero-section.scss
+++ b/src/scss/components/_hero-section.scss
@@ -340,7 +340,6 @@ section.customers-info .text-information-2 {
   padding: 30px;
   position: relative;
   box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.1);
-  
 }
 
 .get_in_touch .title {
@@ -405,7 +404,86 @@ section.customers-info .text-information-2 {
   cursor: pointer;
 }
 
+// Newsletter section
 
+.get_in_touch-new {
+  .title {
+    text-align: center;
+    letter-spacing: 3px;
+    font-size: 2em;
+    line-height: 48px;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    background: linear-gradient(to right, #f4524d, #5543ca);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-transform: uppercase;
+    // font-size: 2em;
+    // text-align: center;
+    // margin-bottom: 30px;
+  }
+
+  .container {
+    display: flex;
+    justify-content: center;
+
+    .subscribe {
+      .form-label {
+        font-size: 1.2em;
+        margin-bottom: 10px;
+        font-weight: bold;
+      }
+
+      .form-control {
+        border-radius: 5px;
+        border: 1px solid lightgray;
+        padding: 10px;
+        width: 100%;
+        margin-bottom: 20px;
+      }
+
+      .checkbox {
+        margin-bottom: 20px;
+        font-size: 1.2em;
+
+        input[type='checkbox'] {
+          margin-right: 10px;
+        }
+      }
+
+      p {
+        font-size: 1.2em;
+        margin-bottom: 20px;
+      }
+
+      .form-field {
+        display: flex;
+        justify-content: center;
+
+        .submit-btn {
+          display: inline-block;
+          background: linear-gradient(125deg, #a72879, #064497);
+          color: #fff;
+          text-transform: uppercase;
+          letter-spacing: 2px;
+          font-size: 16px;
+          padding: 8px 16px;
+          border: none;
+          width: 200px;
+          cursor: pointer;
+          // background-color: lightblue;
+          // border: none;
+          // color: white;
+          // padding: 10px 20px;
+          // border-radius: 5px;
+          // font-size: 1.2em;
+          // margin-top: 20px;
+        }
+      }
+    }
+  }
+}
 
 @media (max-width: 768px) {
   section.hero {
