--- a/src/scss/components/_section-about.scss
+++ b/src/scss/components/_section-about.scss
@@ -1,10 +1,13 @@
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-family: 'EB Garamond', serif;
   color: $black;
   line-height: 1.1;
 }
 
-h2, h3 {
+h2,
+h3 {
   color: $black;
   font-weight: 400;
 }
@@ -36,10 +39,10 @@ p {
 }
 
 a {
-  color: $gray;
+  color: #fff;
   text-decoration: none;
   &:hover {
-    color: $black;
+    color: #ccc;
   }
 }
 
@@ -53,7 +56,6 @@ blockquote {
   display: flex;
   align-items: center;
 }
-
 
 ul {
   list-style: none;
@@ -90,11 +92,10 @@ nav {
 }
 
 nav .grid {
-  > [class*="column-"] {
+  > [class*='column-'] {
     padding: 0.25rem 1rem;
   }
 }
-
 
 .container {
   margin: auto;
@@ -107,35 +108,32 @@ main {
   padding: 2rem 0;
 }
 
-
-
 .section-heading {
   transform: rotate(0) translateX(0);
 }
 
 img {
-	width: 100%;
+  width: 100%;
   height: 100%;
-	object-fit: cover;
+  object-fit: cover;
 }
-
 
 @media (min-width: $md) {
   body {
     font-size: 1.125rem;
   }
-  
+
   nav {
     padding: 2.5rem 0 2.5rem 0;
     ul {
       justify-content: flex-end;
     }
   }
-  
+
   h1 {
     font-size: 3.25rem;
   }
-  
+
   h2 {
     font-size: 2.75rem;
   }
@@ -143,24 +141,23 @@ img {
   h3 {
     font-size: 2.25rem;
   }
-  
+
   img {
     height: 40rem;
   }
-  
+
   .section-heading {
     position: absolute;
     transform-origin: top left;
     transform: rotate(-90deg) translateX(-100%);
   }
-  
+
   .intro {
     padding: 1rem;
   }
-  
+
   blockquote {
     width: 30rem;
     height: 40rem;
   }
 }
-
